// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transforms calls on global _ properties to modular requires 1`] = `
"const lodash__map = require(\\"lodash/map\\");

const lodash__identity = require(\\"lodash/identity\\");

const lodash__isNumber = require(\\"lodash/isNumber\\");

lodash__map([], x => x);
lodash__map([], x => !!x);
lodash__identity;
lodash__isNumber(0);"
`;

exports[`Transforms deconstructured assignment correctly 1`] = `
"var lodash__defaults = require('lodash/defaults');

var _lodash__defaults = lodash__defaults({
  foo: 'a',
  bar: 'b'
}, {
  baz: 'c'
}),
    foo = _lodash__defaults.foo,
    bar = _lodash__defaults.bar,
    baz = _lodash__defaults.baz;"
`;

exports[`Transforms methods in files with a monolithic require and removes monolithic require 1`] = `
"const lodash__map = require('lodash/map');

const lodash__identity = require('lodash/identity');

const lodash__isNumber = require('lodash/isNumber');

lodash__map([], x => x);
lodash__map([], x => !!x);
lodash__identity;
lodash__isNumber(0);"
`;
